# aoc

./: aoc.cabal  package.yaml
app/: Main.hs
bench/: Main.hs
src/Day1/: Day1.hs
src/Day2/: Day2.hs
test/Day1/: Day1Spec.hs
test/Day2/: Day2Spec.hs
