cabal-version: 1.12

name:           aoc
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/aoc#readme>
homepage:       https://github.com/githubuser/aoc#readme
bug-reports:    https://github.com/githubuser/aoc/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2020 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/aoc

library
  exposed-modules:
      Day1.Day1
  other-modules:
      Paths_aoc
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && <5
    , containers
  default-language: Haskell2010

executable aoc-exe
  main-is: Main.hs
  other-modules:
      Paths_aoc
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      aoc
    , base >= 4.7 && <5
  default-language: Haskell2010

test-suite aoc-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Day1.Day1Spec
      Paths_aoc
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      QuickCheck
    , aoc
    , base >= 4.7 && <5
    , hspec
  default-language: Haskell2010

benchmark aoc-bench
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: 
      bench
  ghc-options: -O2
  build-depends:
      aoc
    , base >= 4.7 && <5
    , criterion
  default-language: Haskell2010
